objects/V_ODATA_ORDER_ITEMS__x.object
<CustomObject>
    <fields>
        <fullName>ACTION_CODE__c</fullName>
        <description>ACTION_CODE</description>
        <externalDeveloperName>ACTION_CODE</externalDeveloperName>
        <label>ACTION_CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER_TRACKING__c</fullName>
        <description>CARRIER_TRACKING</description>
        <externalDeveloperName>CARRIER_TRACKING</externalDeveloperName>
        <label>CARRIER_TRACKING</label>
        <length>61</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER__c</fullName>
        <description>CARRIER</description>
        <externalDeveloperName>CARRIER</externalDeveloperName>
        <label>CARRIER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONFIGURATION__c</fullName>
        <description>CONFIGURATION</description>
        <externalDeveloperName>CONFIGURATION</externalDeveloperName>
        <label>CONFIGURATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_CHARGE__c</fullName>
        <description>CURRENT_CHARGE</description>
        <externalDeveloperName>CURRENT_CHARGE</externalDeveloperName>
        <label>CURRENT_CHARGE</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCOUNT_AMOUNT__c</fullName>
        <description>DISCOUNT_AMOUNT</description>
        <externalDeveloperName>DISCOUNT_AMOUNT</externalDeveloperName>
        <label>DISCOUNT_AMOUNT</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISCOUNT_METHOD__c</fullName>
        <description>DISCOUNT_METHOD</description>
        <externalDeveloperName>DISCOUNT_METHOD</externalDeveloperName>
        <label>DISCOUNT_METHOD</label>
        <length>116</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCOUNT_PERCENT__c</fullName>
        <description>DISCOUNT_PERCENT</description>
        <externalDeveloperName>DISCOUNT_PERCENT</externalDeveloperName>
        <label>DISCOUNT_PERCENT</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENTITLEMENT_ID__c</fullName>
        <description>ENTITLEMENT_ID</description>
        <externalDeveloperName>ENTITLEMENT_ID</externalDeveloperName>
        <label>ENTITLEMENT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITLEMENT_NAME__c</fullName>
        <description>ENTITLEMENT_NAME</description>
        <externalDeveloperName>ENTITLEMENT_NAME</externalDeveloperName>
        <label>ENTITLEMENT_NAME</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRANT_ID__c</fullName>
        <description>GRANT_ID</description>
        <externalDeveloperName>GRANT_ID</externalDeveloperName>
        <label>GRANT_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LICENSE_EOC__c</fullName>
        <description>LICENSE_EOC</description>
        <externalDeveloperName>LICENSE_EOC</externalDeveloperName>
        <label>LICENSE_EOC</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LICENSE_NUMBER__c</fullName>
        <description>LICENSE_NUMBER</description>
        <externalDeveloperName>LICENSE_NUMBER</externalDeveloperName>
        <label>LICENSE_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <description>LINE_NUMBER</description>
        <externalDeveloperName>LINE_NUMBER</externalDeveloperName>
        <label>LINE_NUMBER</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_PRICE__c</fullName>
        <description>NET_PRICE</description>
        <externalDeveloperName>NET_PRICE</externalDeveloperName>
        <label>NET_PRICE</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORDER_ID__c</fullName>
        <description>ORDER_ID</description>
        <externalDeveloperName>ORDER_ID</externalDeveloperName>
        <label>ORDER_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_ORDER_ITEM_ID__c</fullName>
        <description>PARENT_ORDER_ITEM_ID</description>
        <externalDeveloperName>PARENT_ORDER_ITEM_ID</externalDeveloperName>
        <label>PARENT_ORDER_ITEM_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_NUMBER__c</fullName>
        <description>PART_NUMBER</description>
        <externalDeveloperName>PART_NUMBER</externalDeveloperName>
        <label>PART_NUMBER</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CODE__c</fullName>
        <description>PRODUCT_CODE</description>
        <externalDeveloperName>PRODUCT_CODE</externalDeveloperName>
        <label>PRODUCT_CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_NAME__c</fullName>
        <description>PRODUCT_NAME</description>
        <externalDeveloperName>PRODUCT_NAME</externalDeveloperName>
        <label>PRODUCT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTION_ID__c</fullName>
        <description>PROMOTION_ID</description>
        <externalDeveloperName>PROMOTION_ID</externalDeveloperName>
        <label>PROMOTION_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTION_NAME__c</fullName>
        <description>PROMOTION_NAME</description>
        <externalDeveloperName>PROMOTION_NAME</externalDeveloperName>
        <label>PROMOTION_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <description>QUANTITY</description>
        <externalDeveloperName>QUANTITY</externalDeveloperName>
        <label>QUANTITY</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUOTE_ITEM_ID__c</fullName>
        <description>QUOTE_ITEM_ID</description>
        <externalDeveloperName>QUOTE_ITEM_ID</externalDeveloperName>
        <label>QUOTE_ITEM_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROOT_ORDER_ITEM_ID__c</fullName>
        <description>ROOT_ORDER_ITEM_ID</description>
        <externalDeveloperName>ROOT_ORDER_ITEM_ID</externalDeveloperName>
        <label>ROOT_ORDER_ITEM_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>ROW_ID</description>
        <externalDeveloperName>ROW_ID</externalDeveloperName>
        <label>ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_DATE__c</fullName>
        <description>SHIP_DATE</description>
        <externalDeveloperName>SHIP_DATE</externalDeveloperName>
        <label>SHIP_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SHIP_METHOD__c</fullName>
        <description>SHIP_METHOD</description>
        <externalDeveloperName>SHIP_METHOD</externalDeveloperName>
        <label>SHIP_METHOD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACKING_NUMBER__c</fullName>
        <description>TRACKING_NUMBER</description>
        <externalDeveloperName>TRACKING_NUMBER</externalDeveloperName>
        <label>TRACKING_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>